Updates to api calls

--- a/app/views/index.handlebars
+++ b/app/views/index.handlebars
@@ -10,6 +10,8 @@
   		<p><b>Location:</b> {{location}} </p>
   		<p><b>Date:</b> {{date}} </p>
   		<p><b>Description:</b> {{description}} </p>
+      <p><b>Latatude:</b> {{lat}}</p>
+      <p><b>Longitude:</b> {{lng}}</p>
   		<p><b>Time to (sec):</b> {{to}}</p>
   	</ul></li>
   	{{/each}}
@@ -23,6 +25,7 @@
   		<p><b>Subject:</b> {{subject}} </p>
   		<p><b>Date:</b> {{date}} </p>
   		<p><b>Reference:</b> {{reference}} </p>
+      <p><b>Full Verse:</b> {{fullVerse}}</p>
   		<p><b>Outline:</b>
   			<ol>
   				{{#each outline}}
