Added simple to in data dump

--- a/app/views/index.handlebars
+++ b/app/views/index.handlebars
@@ -43,6 +43,7 @@
   	<li><ul>
   		<p><b>From:</b> {{from}} </p>
   		<p><b>To:</b> {{to}} </p>
+      <p><b>Simple:</b> {{simpleTo}}</p>
   		<p><b>Date:</b> {{date}} </p>
   		<p><b>subject:</b> {{subject}} </p>
   		<p><b>Message:</b> {{message}} </p>
