Added some comments

--- a/app/views/index.handlebars
+++ b/app/views/index.handlebars
@@ -1,4 +1,5 @@
-
+<!-- Displays a data dump of all information to webpage
+Designed to be an easy access to all the information to avoid making multiple api calls to see the overall plan -->
 
   <h1>{{title }}</h1>
   <p>Welcome to {{title }}</p>
