Changes based on new specification for messages, added signups & topics
Closed issues #14 #11 #10 #8
* adds signup data type
* adds topic data type
* changes to messages
    * to is statically set to minister group
    * introduces topics as a way of seperating messages
* changes to events
    * introduces relatedSignup field for future use
* adjusted seed file and data dump page to reflect added/changed features
* added/update documentation

--- a/app/views/index.handlebars
+++ b/app/views/index.handlebars
@@ -13,7 +13,6 @@ Designed to be an easy access to all the information to avoid making multiple ap
   		<p><b>Description:</b> {{description}} </p>
       <p><b>Latatude:</b> {{lat}}</p>
       <p><b>Longitude:</b> {{lng}}</p>
-  		<p><b>Time to (sec):</b> {{to}}</p>
   	</ul></li>
   	{{/each}}
   	</ol>
@@ -52,6 +51,20 @@ Designed to be an easy access to all the information to avoid making multiple ap
   	{{/each}}
   	</ol>
  </p>
+ <p>Signups: 
+    <ol>
+    {{#each signups}}
+    <li><ul>
+      <p><b>Name:</b> {{name}} </p>
+      <p><b>Date Info:</b> {{dateInfo}} </p>
+      <p><b>Member Count:</b> {{memberCount}}</p>
+      <p><b>Location:</b> {{location}} </p>
+      <p><b>address:</b> {{address}} </p>
+      <p><b>Description:</b> {{description}} </p>
+    </ul></li>
+    {{/each}}
+    </ol>
+ </p>
  <p>Locations: 
     <ol>
     {{#each locs}}
@@ -60,6 +73,16 @@ Designed to be an easy access to all the information to avoid making multiple ap
       <p><b>Address:</b> {{address}} </p>
       <p><b>Lat:</b> {{lat}} </p>
       <p><b>Lng:</b> {{lng}} </p>
+    </ul></li>
+    {{/each}}
+    </ol>
+ </p>
+ <p>Topics: 
+    <ol>
+    {{#each topics}}
+    <li><ul>
+      <p><b>Name:</b> {{name}} </p>
+      <p><b>Anonymous?:</b> {{isAnon}} </p>
     </ul></li>
     {{/each}}
     </ol>
@@ -81,7 +104,7 @@ Designed to be an easy access to all the information to avoid making multiple ap
     {{#each groups}}
     <li><ul>
       <p><b>Name:</b> {{name}} </p>
-      <p><b>Address:</b> {{members}} </p>
+      <p><b>Members:</b> {{members}} </p>
       <p><b>WriteTalks:</b> {{writeTalks}} </p>
       <p><b>WriteMsgs:</b> {{writeMsgs}} </p>
       <p><b>WriteEvents:</b> {{writeEvents}} </p>
