Update to web page and semver Matches semantic version requirments Update to api docs to show these changes Beginnings of an admin interface webpage

--- a/app/views/partials/welcome.handlebars
+++ b/app/views/partials/welcome.handlebars
@@ -1,2 +1,8 @@
 
 <p>Welcome to {{title }}</p>
+
+<form id="login-form">
+	<input type="text" name="email">
+	<input type="password" name="password">
+	<input type="submit" name="submit" value="Log In">
+</form>
